[package]
name = "cspfinal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# make sure to get rid of the dynamic_linking when releasing 
bevy = { version = "0.13.0", features = [
  "dynamic_linking",
  "bevy_ui",
] }
bevy_pipelines_ready = "0.3.0"
bevy-inspector-egui = "0.23.4"
rand = "0.8.5"
kd-tree = "0.5.3"
typenum = "1.17.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
